[gd_scene load_steps=11 format=3 uid="uid://bapuut0ibhx8k"]

[ext_resource type="Script" uid="uid://c3jjco16t64er" path="res://entities/enemy/base_enemy.gd" id="1_815kx"]
[ext_resource type="Texture2D" uid="uid://ohx4cuoac64h" path="res://assets/sprites/simpleSpace_tilesheet.png" id="1_gtfva"]
[ext_resource type="PackedScene" uid="uid://bth872ij6mkpc" path="res://components/grid_move_component.tscn" id="2_mk5di"]
[ext_resource type="Script" uid="uid://bmucxhobuv3i" path="res://addons/godot_state_charts/state_chart.gd" id="4_mk5di"]
[ext_resource type="Script" uid="uid://ckolnjvgnona7" path="res://addons/godot_state_charts/parallel_state.gd" id="5_jx2kc"]
[ext_resource type="Script" uid="uid://jdqq8gw24d5i" path="res://addons/godot_state_charts/compound_state.gd" id="6_vseg5"]
[ext_resource type="Script" uid="uid://dcu2i8t8kecjt" path="res://addons/godot_state_charts/atomic_state.gd" id="7_o6y6w"]
[ext_resource type="Script" uid="uid://btbuih6emodp4" path="res://addons/godot_state_charts/transition.gd" id="8_kigfy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_815kx"]
atlas = ExtResource("1_gtfva")
region = Rect2(192, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_mk5di"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_815kx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_815kx")
}],
"loop": true,
"name": &"move_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_815kx")
}],
"loop": true,
"name": &"move_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_815kx")
}],
"loop": true,
"name": &"move_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_815kx")
}],
"loop": true,
"name": &"move_up",
"speed": 5.0
}]

[node name="BaseEnemy" type="Node2D" node_paths=PackedStringArray("grid_move_component") groups=["enemies"]]
script = ExtResource("1_815kx")
grid_move_component = NodePath("GridMoveComponent")
home_position = Vector2(5, 5)

[node name="GridMoveComponent" parent="." node_paths=PackedStringArray("actor", "sprite", "state_chart") instance=ExtResource("2_mk5di")]
actor = NodePath("..")
sprite = NodePath("../Sprite2D")
state_chart = NodePath("../StateChart")
speed = 0.5

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 0, 0.416667, 1)
sprite_frames = SubResource("SpriteFrames_mk5di")
animation = &"move_up"
autoplay = "idle"

[node name="StateChart" type="Node" parent="."]
script = ExtResource("4_mk5di")
metadata/_custom_type_script = "uid://bmucxhobuv3i"

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("5_jx2kc")

[node name="Emotion" type="Node" parent="StateChart/Root"]
script = ExtResource("6_vseg5")
initial_state = NodePath("Calm")

[node name="Calm" type="Node" parent="StateChart/Root/Emotion"]
script = ExtResource("7_o6y6w")

[node name="OnPlayerCapturingToAlerted" type="Node" parent="StateChart/Root/Emotion/Calm"]
script = ExtResource("8_kigfy")
to = NodePath("../../Alerted")
event = &"player_is_capturing"
delay_in_seconds = "0.0"

[node name="Alerted" type="Node" parent="StateChart/Root/Emotion"]
script = ExtResource("7_o6y6w")

[node name="OnPlayerStopCapturingToCalm" type="Node" parent="StateChart/Root/Emotion/Alerted"]
script = ExtResource("8_kigfy")
to = NodePath("../../Calm")
event = &"player_stops_capturing"
delay_in_seconds = "0.0"

[node name="Task" type="Node" parent="StateChart/Root"]
script = ExtResource("6_vseg5")
initial_state = NodePath("Search")

[node name="Search" type="Node" parent="StateChart/Root/Task"]
script = ExtResource("7_o6y6w")

[node name="OnTryMove" type="Node" parent="StateChart/Root/Task/Search"]
script = ExtResource("8_kigfy")
to = NodePath("../../Moving")
event = &"move"
delay_in_seconds = "0.0"

[node name="OnNoPath" type="Node" parent="StateChart/Root/Task/Search"]
script = ExtResource("8_kigfy")
to = NodePath("../../StopMoving")
event = &"no_path"
delay_in_seconds = "0.0"

[node name="Moving" type="Node" parent="StateChart/Root/Task"]
script = ExtResource("7_o6y6w")

[node name="OnStopMoving" type="Node" parent="StateChart/Root/Task/Moving"]
script = ExtResource("8_kigfy")
to = NodePath("../../Search")
event = &"stop_move"
delay_in_seconds = "0.0
"

[node name="OnNoPath" type="Node" parent="StateChart/Root/Task/Moving"]
script = ExtResource("8_kigfy")
to = NodePath("../../StopMoving")
event = &"no_path"
delay_in_seconds = "0.0"

[node name="StopMoving" type="Node" parent="StateChart/Root/Task"]
script = ExtResource("7_o6y6w")

[node name="ToCanMove" type="Node" parent="StateChart/Root/Task/StopMoving"]
script = ExtResource("8_kigfy")
to = NodePath("../../Search")
delay_in_seconds = "1.0"

[connection signal="state_processing" from="StateChart/Root/Emotion/Calm" to="." method="_on_calm_state_processing"]
[connection signal="state_processing" from="StateChart/Root/Emotion/Alerted" to="." method="_on_alerted_state_processing"]
[connection signal="state_processing" from="StateChart/Root/Task/Search" to="." method="_on_search_state_processing"]
[connection signal="state_processing" from="StateChart/Root/Task/Moving" to="." method="_on_moving_state_processing"]
